--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,7 +12,9 @@
     "body-parser": "^1.16.0",
     "express": "^4.14.0",
     "mongodb": "^2.2.21",
-    "mongoose": "^4.7.7"
+    "mongoose": "^4.7.7",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
