Routes separating PassportJS Preparation

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -9,6 +9,7 @@
   "author": "Eka Setya Nugraha",
   "license": "ISC",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.16.0",
     "express": "^4.14.0",
     "mongodb": "^2.2.21",
