--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -4,9 +4,7 @@
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
-    "start": "npm run build",
-    "build": "webpack-dev-server --content-base app --inline --hot --history-api-fallback",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server --content-base app --inline --hot --history-api-fallback"
   },
   "author": "",
   "license": "ISC",
@@ -29,8 +27,6 @@
     "babel-preset-stage-0": "^6.22.0",
     "babelify": "^7.3.0",
     "browserify": "^13.1.1",
-    "gulp": "^3.9.1",
-    "gulp-connect": "^5.0.0",
     "vinyl-source-stream": "^1.1.0",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.3.0"
