--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,11 +11,15 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.16.0",
+    "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
+    "express-session": "^1.15.1",
     "mongodb": "^2.2.21",
     "mongoose": "^4.7.7",
+    "morgan": "^1.8.1",
     "passport": "^0.3.2",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
