--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.15.3",
+    "currency-formatter": "^1.1.1",
     "flux": "^3.1.2",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
