Git ignore Bower

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,2 @@
-Backend/node_modules/
-Frontend/app/bower_components/
-Frontend/node_modules/
-Frontend/app/bundle.js
 node_modules
+bower_components
