--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "flux": "^3.1.2",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-dropzone": "^3.12.2",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.0",
     "redux": "^3.6.0",
