--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
-    "start": "webpack-dev-server --content-base app --inline --hot --history-api-fallback"
+    "start": "webpack-dev-server --content-base app --inline --hot --host 0.0.0.0"
   },
   "author": "",
   "license": "ISC",
