--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^15.3.2",
     "react-dropzone": "^3.12.2",
     "react-redux": "^5.0.3",
-    "react-router": "^3.0.0",
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.0",
     "redux-promise-middleware": "^4.2.0",
